// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Track/Track.tools.svelte: Default 1`] = `
<div>
  <div
    class="undefined root svelte-8oy723"
  >
    <a
      class="svelte-8oy723"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1l44pje"
        height="256"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-8oy723"
    >
      <span
        class="title svelte-8oy723"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
  </div>
</div>
`;

exports[`Toolshot components/Track/Track.tools.svelte: With details 1`] = `
<div>
  <div
    class="undefined root svelte-8oy723"
  >
    <a
      class="svelte-8oy723"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1l44pje"
        height="256"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-8oy723"
    >
      <span
        class="title svelte-8oy723"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
    <div
      class="duration svelte-8oy723"
    >
      2:06
    </div>
     
  </div>
</div>
`;

exports[`Toolshot components/Track/Track.tools.svelte: With menu 1`] = `
<div>
  <div
    class="undefined root svelte-8oy723"
  >
    <a
      class="svelte-8oy723"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1l44pje"
        height="256"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-8oy723"
    >
      <span
        class="title svelte-8oy723"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
    <span
      aria-expanded="false"
      aria-haspopup="menu"
      class="wrapper svelte-1v2cnbz"
    >
      <button
        class="iconOnly noBorder svelte-xh4kfu"
      >
        <i
          class="material-icons svelte-xh4kfu"
        >
          more_vert
        </i>
         
         
        
         
      </button>
    </span>
     
    
  </div>
</div>
`;
